--- a/index.html
+++ b/index.html
@@ -1,49 +1,51 @@
-<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="cont">
-	<div class="mouse"></div>
-	<div class="app">
-		<div class="app__bgimg">
-			<div class="app__bgimg-image app__bgimg-image--1">
-			</div>
-			<div class="app__bgimg-image app__bgimg-image--2">
-			</div>
-		</div>
-		<div class="app__img">
-			<img onmousedown="return false" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/537051/whiteTest4.png" alt="city" />
-		</div>
-		
-		<div class="app__text app__text--1">
-			<div class="app__text-line app__text-line--4">imperdiet </div>
-			<div class="app__text-line app__text-line--3">ut le</div>
-			<div class="app__text-line app__text-line--2">non tincidunt </div>
-			<div class="app__text-line app__text-line--1"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/537051/opus-attachment.png" alt="" /></div>
-		</div>
-		
-		<div class="app__text app__text--2">
-			<div class="app__text-line app__text-line--4">habitant</div>
-			<div class="app__text-line app__text-line--3">ut eget</div>
-			<div class="app__text-line app__text-line--2">Nam imperdiet</div>
-			<div class="app__text-line app__text-line--1"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/537051/opus-attachment.png" alt="" /></div>
-		</div>
-	</div>
-	<div class="pages">
-		<ul class='pages__list'>
-			<li data-target='1' class='pages__item pages__item--1 page__item-active'></li>
-			<li data-target='2' class='pages__item pages__item--2'></li>
-		</ul>
-	</div>
-</div>
-<a href="https://dribbble.com/shots/2936160-Opus-Animation" target="_blank" class="icon-link">
-    <img src="http://icons.iconarchive.com/icons/uiconstock/socialmedia/256/Dribbble-icon.png">
-  </a>
-  <a href="https://twitter.com/mrspok407" target="_blank" class="icon-link icon-link--twitter">
-    <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/twitter-128.png">
-  </a>
-  <script src="main.js"></script>
+    <div class="animation01">
+        <div class="rhombus_small">
+            <div class="rhombus">
+                <div class="border_box">
+                    <span class="line line01"></span>
+                    <span class="line line02"></span>
+                    <span class="line line03"></span>
+                    <span class="line line04"></span>
+                    <span class="circle circle01"></span>
+                    <span class="circle circle02"></span>
+                    <span class="circle circle03"></span>
+                    <span class="circle circle04"></span>
+                    <span class="animation_line animation_line01"></span>
+                    <span class="animation_line_wrapper animation_line02_wrapper"><span class="animation_line animation_line02"></span></span>
+                    <span class="animation_line animation_line03"></span>
+                    <span class="animation_line_wrapper animation_line04_wrapper"><span class="animation_line animation_line04"></span></span>
+                    <span class="animation_line animation_line05"></span>
+                    <span class="animation_line_wrapper animation_line06_wrapper"><span class="animation_line animation_line06"></span></span>
+                    <span class="animation_line animation_line07"></span>
+                    <span class="animation_line_wrapper animation_line08_wrapper"><span class="animation_line animation_line08"></span></span>
+                </div>
+                <div class="wave">
+                    <div class="wave_wrapper"><div class="wave_box"></div></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="animation02">
+        <div class="rhombus_box">
+            <span class="rhombus_item_wrapper rhombus_item01_wrapper"><span class="rhombus_item"></span></span>
+            <span class="rhombus_item_wrapper rhombus_item02_wrapper"><span class="rhombus_item"></span></span>
+        </div>
+        <div class="double_content">
+            <div class="double_wrapper02 dotted02"><div class="dotted_hide"><div class="double_wrapper01 dotted01"><span class="dotted_right"></span></div></div></div>
+            <div class="double_wrapper02 white02"><div class="double_wrapper01 white01"></div></div>
+            <div class="double_wrapper02 gray02"><div class="double_wrapper01 gray01"></div></div>
+            <div class="double_wrapper02 orange02"><div class="double_wrapper01 orange01"></div></div>
+        </div>
+        <div class="name">
+            <p>Ankita Lpyadav</p>
+            <span class="name_circle01"></span>
+            <span class="name_circle02"></span>
+        </div>
+    </div>
 </body>
 </html>
